--- a/front-end/src/app/demo/components/modal/evento/evento.component.html
+++ b/front-end/src/app/demo/components/modal/evento/evento.component.html
@@ -1,42 +1,144 @@
 <div class="grid p-0">
-    <p-tabView>
+    <p-tabView class="col-12">
         <p-tabPanel header="Detalhes">
-            <div class="card col-12 mb-3">
-                <div class="grid">
-                    <div class=" col-12 md:col-8">
-                        <div class="p-fluid p-formgrid grid">
-                            <div class="field col-12 md:col-4">
-                                <label htmlFor="firstname2">Esporte Tipo</label>
-                                <input pInputText id="firstname2" [(ngModel)]="evento.esporteTipo" disabled="true"
-                                    type="text" />
-                            </div>
-                            <div class="field col-12 md:col-4">
-                                <label htmlFor="lastname2">Horario</label>
-                                <input pInputText id="lastname2" type="text" />
+            <div class="grid p-0">
+
+                <div class="col-12 md:col-12">
+
+                    <div class="p-fluid p-formgrid grid">
+                        <div class="field col-12 md:col-12  mb-0 pb-0">
+                            <label htmlFor="esporteTipos" class="font-bold">Esporte Tipo</label>
+                            <p-dropdown id="esporteTipos" [options]="esporteTipos" [(ngModel)]="event.esporteTipo"
+                                placeholder="Filtrar Esporte Tipo"></p-dropdown>
+                        </div>
+
+                        <div class="field col-12 mb-0 pb-0">
+                            <label for="description" class="font-bold">Descrição</label>
+                            <textarea class="w-full" id="description" pInputTextarea [(ngModel)]="event.descricao" required
+                                rows="3"></textarea>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 md:col-6">
+                    <div class="p-fluid p-formgrid grid">
+
+                        <div class="field align-items-center flex flex-row col-12 m-0"
+                            style="background: #f9fafb; border-radius: 10px;">
+                            <div class="flex align-items-center justify-content-center border-round"
+                                style="color: #FFFFFF; background-color: #2563eb;background-image: linear-gradient(152deg, #2563eb 0%, #39b7b7 100%);"
+                                [ngStyle]="{width: '3rem', height: '3rem'}">
+                                <i class="pi pi-map-marker text-3xl"></i>
                             </div>
 
-                            <div class="field col-12 md:col-6">
+                            <label class="font-bold ml-2 mt-2 font-size-18" style="font-size: 14px;">Localização</label>
+                        </div>
 
+                        <div class="field col-12 md:col-4 mb-0 pb-0">
+                            <label htmlFor="cityName" class="font-bold">Cidade</label>
+                            <input pInputText id="cityName" disabled="true" [(ngModel)]="event.location.city.name" />
+                        </div>
+
+                        <div class="field col-12 md:col-8 mb-0 pb-0">
+                            <label htmlFor="address" class="font-bold">Endereço</label>
+                            <input pInputText id="address" [(ngModel)]="event.location.address" />
+                        </div>
+
+                        <div class="field col-12 md:col-12 mb-0 pb-0">
+                            <label htmlFor="local" class="font-bold">Local</label>
+                            <input pInputText id="local" [(ngModel)]="event.location.local" />
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="col-12 md:col-6">
+                    <div class="p-fluid p-formgrid grid">
+
+                        <div class="field align-items-center flex flex-row col-12 m-0"
+                            style="background: #f9fafb; border-radius: 10px;">
+                            <div class="flex align-items-center justify-content-center border-round"
+                                style="color: #FFFFFF; background-color: #2563eb;background-image: linear-gradient(152deg, #2563eb 0%, #39b7b7 100%);"
+                                [ngStyle]="{width: '3rem', height: '3rem'}">
+                                <i class="pi pi-clock text-3xl"></i>
                             </div>
 
+                            <label class="font-bold ml-2 mt-2 font-size-18" style="font-size: 14px;">Horário</label>
+                        </div>
+
+                        <div class="field col-12 md:col-12 mb-0 pb-0">
+                            <label htmlFor="tipoHorario" class="font-bold">Tipo Horário</label>
+                            <p-dropdown id="tipoHorario" [(ngModel)]="event.configHorario.tipo" [options]="eventoHorarioTipos"
+                                placeholder="Filtrar Esporte Tipo"></p-dropdown>
+                        </div>
+
+
+                        <div *ngIf="event.configHorario.tipo === NAO_SE_REPETE" class="field col-12 md:col-6 mb-0 pb-0">
+                            <label htmlFor="date" class="font-bold">Dia/Hora Começo</label>
+                            <p-calendar id="date" [(ngModel)]="event.configHorario.uniqueSchedule.startSchedule"
+                                [iconDisplay]="'input'" [hourFormat]="24" [showIcon]="true" [showTime]="true"
+                                inputId="calendar-24h" />
+                        </div>
+
+                        <div *ngIf="event.configHorario.tipo === NAO_SE_REPETE" class="field col-12 md:col-6">
+                            <label htmlFor="date" class="font-bold">Dia/Hora Fim</label>
+                            <p-calendar id="date" [(ngModel)]="event.configHorario.uniqueSchedule.endSchedule"
+                                [iconDisplay]="'input'" [hourFormat]="24" [showIcon]="true" [showTime]="true"
+                                inputId="calendar-24h" />
+                        </div>
+
+
+                        <div *ngIf="event.configHorario.tipo === SEMANAL" class="field col-12 md:col-6">
+                            <label htmlFor="date" class="font-bold">Dias da Semana</label>
+                            <p-multiSelect [options]="diasSemanas" [(ngModel)]="diasSemanasSelected" (onChange)="onDaySelect()"
+                                placeholder="Selecionar os dias da semana" />
+                        </div>
+
+                        <div *ngIf="event.configHorario.tipo === SEMANAL" class="field col-12 md:col-3">
+                            <label htmlFor="date" class="font-bold">Hora Começo</label>
+
+                            <p-calendar [(ngModel)]="event.configHorario.horarioSemanal.startHour" [iconDisplay]="'input'"
+                                [showIcon]="true" [timeOnly]="true" inputId="templatedisplay">
+                                <ng-template pTemplate="inputicon" let-clickCallBack="clickCallBack">
+                                    <i class="fa-regular fa-clock  pointer-events-none" (click)="clickCallBack($event)"></i>
+                                </ng-template>
+                            </p-calendar>
+
+                        </div>
+
+                        <div *ngIf="event.configHorario.tipo === SEMANAL" class="field col-12 md:col-3">
+                            <label htmlFor="date" class="font-bold">Hora Fim</label>
+
+                            <p-calendar [(ngModel)]="event.configHorario.horarioSemanal.endHour" [iconDisplay]="'input'"
+                                [showIcon]="true" [timeOnly]="true" inputId="templatedisplay">
+                                <ng-template pTemplate="inputicon" let-clickCallBack="clickCallBack">
+                                    <i class="fa-regular fa-clock pointer-events-none" (click)="clickCallBack($event)"></i>
+                                </ng-template>
+                            </p-calendar>
 
                         </div>
                     </div>
-
-                    <div class="col-12  md:col-4">
-                        <div class="flex flex-column">
-                            <label style="font-size: 16px;" class="mb-2 font-bold">Localização</label>
-                            <iframe style="border:0; border-radius: 20px;" height="auto" allowfullscreen=""
-                                loading="lazy" referrerpolicy="no-referrer-when-downgrade"
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2955.0182702764077!2d-49.16623194610146!3d-28.26411253783363!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9521107b8f526b83%3A0x12d481bc39a8214c!2sGin%C3%A1sio%20de%20Esporte%20Atilio%20Ghisi!5e0!3m2!1spt-BR!2sbr!4v1715735658111!5m2!1spt-BR!2sbr"></iframe>
-                        </div>
-                    </div>
-
                 </div>
             </div>
-
+        </p-tabPanel>
+        <p-tabPanel header="Horários">
+            <p-table [value]="event.horarios" [paginator]="true" [rows]="5" [rowsPerPageOptions]="[5, 10]">
+                <ng-template pTemplate="header">
+                    <tr>
+                        <th>Horário Começo</th>
+                        <th>Horário Fim</th>
+                    </tr>
+                </ng-template>
+                <ng-template pTemplate="body" let-horario>
+                    <tr>
+                        <td>{{ horario.horarioComeco }}</td>
+                        <td>{{ horario.horarioFim }}</td>
+                    </tr>
+                </ng-template>
+            </p-table>
+        </p-tabPanel>
+        <p-tabPanel header="Participantes">
             <div class="col-12">
-                <label style="font-size: 16px;" class="ml-2 mb-4 font-bold">Participantes</label>
 
                 <div class="col-12 md:col-12 p-1">
                     <div class="card p-1 surface-border">
@@ -46,11 +148,14 @@
                                     image="https://primefaces.org/cdn/primeng/images/demo/avatar/xuxuefeng.png"
                                     size="large" shape="circle" />
                                 <div>
-                                    <div class=" text-1xl mb-1 font-bold">TESTE TESTE</div>
+                                    <div class=" text-1xl mb-1 font-bold">{{ event.userCreator.name }} {{
+                                        event.userCreator.lastName }}</div>
                                     <p-tag severity="warning" value="Organizador" />
                                 </div>
                             </div>
-                            <div class="flex flex-row align-items-center ">
+                            <div class="flex flex-row align-items-center">
+                                <button pButton pRipple type="button" icon="pi pi-user-plus" (click)="openWhatsapp()"
+                                    class="p-button-rounded p-button-success p-button-outlined"></button>
                                 <button pButton pRipple type="button" icon="pi pi-whatsapp" (click)="openWhatsapp()"
                                     class="p-button-rounded p-button-success p-button-outlined"></button>
                             </div>
@@ -58,18 +163,18 @@
                     </div>
                 </div>
 
-                <p-dataView #dv [value]="evento.participantes" [paginator]="true" [rows]="9" filterBy="name"
+                <p-dataView #dv [value]="event.participants" [paginator]="true" [rows]="9" filterBy="name"
                     layout="grid">
                     <ng-template let-products pTemplate="gridItem">
                         <div class="grid grid-nogutter">
-                            <div class="col-12 md:col-3" *ngFor="let participante of evento.participantes">
+                            <div class="col-12 md:col-3" *ngFor="let participante of event.participants">
                                 <div class="card p-1 m-2 surface-border">
                                     <div class="flex flex-row align-items-center justify-content-between p-2">
                                         <div class="flex flex-row align-items-center">
                                             <p-avatar class="mr-3"
                                                 image="https://primefaces.org/cdn/primeng/images/demo/avatar/xuxuefeng.png"
                                                 size="large" shape="circle" />
-                                            <div class="text-1xl font-bold">{{participante.usuario.nome}}</div>
+                                            <div class="text-1xl font-bold">{{participante.user.name}}</div>
                                         </div>
                                     </div>
                                 </div>
@@ -79,20 +184,12 @@
                 </p-dataView>
 
             </div>
-
-            <div class="col-12 p-0 flex flex-row align-items-center justify-content-end ">
-                <button pButton pRipple type="button" label="Participar" icon="pi pi-whatsapp"
-                    class="p-button-rounded p-button-success p-button-outlined"></button>
-            </div>
-
-            <div>
-
-            </div>
-        </p-tabPanel>
-        <p-tabPanel header="Horários">
-            <p>
-                Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium...
-            </p>
         </p-tabPanel>
     </p-tabView>
+
+    <div class="col-12 p-0 flex flex-row align-items-center justify-content-end ">
+        <button pButton pRipple type="button" label="Participar" (click)="participateEvent()"
+            class="p-button-rounded"></button>
+    </div>
+
 </div>
