--- a/front-end/src/assets/layout/styles/theme/lara-light-blue/theme.css
+++ b/front-end/src/assets/layout/styles/theme/lara-light-blue/theme.css
@@ -4011,7 +4011,7 @@
 
   .p-accordion .p-accordion-header .p-accordion-header-link {
     padding: 1.25rem;
-    border: 1px solid #e5e7eb;
+    /* border: 1px solid #e5e7eb; */
     color: #6b7280;
     background: #f9fafb;
     font-weight: 700;
@@ -4028,7 +4028,7 @@
   }
   .p-accordion .p-accordion-header:not(.p-highlight):not(.p-disabled):hover .p-accordion-header-link {
     background: #f3f4f6;
-    border-color: #e5e7eb;
+    /* border-color: #e5e7eb; */
     color: #374151;
   }
   .p-accordion .p-accordion-header:not(.p-disabled).p-highlight .p-accordion-header-link {
@@ -4045,14 +4045,14 @@
   }
   .p-accordion .p-accordion-content {
     padding: 1.25rem;
-    border: 1px solid #e5e7eb;
+    /* border-bottom: 1px solid #e5e7eb; */
     background: #ffffff;
     color: #4b5563;
     border-top: 0;
     border-top-right-radius: 0;
     border-top-left-radius: 0;
-    border-bottom-right-radius: 6px;
-    border-bottom-left-radius: 6px;
+    /* border-bottom-right-radius: 6px; */
+    /* border-bottom-left-radius: 6px; */
   }
   .p-accordion p-accordiontab .p-accordion-tab {
     margin-bottom: 4px;
